fix(Logo): size of Logo component was not right
On desktop mode Logo component was not showing right height
and was also not positioned correctly

--- a/src/components/Logo/Logo.styles.scss
+++ b/src/components/Logo/Logo.styles.scss
@@ -7,3 +7,10 @@
         width: 100%;
     }
 }
+
+@media (min-width: 600px) {
+    .votesub-logo-container {
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+}
